--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>Yummy Bootstrap Template - Index</title>
+  <title>Index</title>
   <meta content="" name="description">
 </head>
 
